[package]
name = "beye_cycles"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"
description = "A game about bicycles and eyes"
homepage = "https://github.com/lucasmerlin/beye_cycle"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = ["jpeg", "webp"] }

# We need the git version since in 0.1 there is a bug that causes the game to crash sometimes
avian2d = { version = "0.1", git = "https://github.com/Jondolf/avian", features = ["debug-plugin"] }

svg = "0.17.0"
itertools = "0.13.0"
data-url = "0.3"
lyon = "1"

bevy_egui = "0.28.0"
bevy-inspector-egui = "0.25.1"
egui_extras = "0.28.1"
enum-iterator = { version = "2" }

rand = "0.8"
rand_derive2 = "0.1"

bevy_tweening = "0.11.0"
